[project]
name = "api2-hnzzzsw"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "tk-base-utils>=0.3.5",
    "tk-db-utils>=0.2.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
